src/test/ui/gc/check_finalizers.stderr
error: `ShouldFail(Cell::new(123))` cannot be safely finalized.
  --> $DIR/check_finalizers.rs:45:13
   |
LL |         self.0.replace(456);
   |         -------------------
   |         |
   |         caused by the expression in `fn drop(&mut)` here because
   |         it uses a type which is not safe to use in a finalizer.
...
LL |     Gc::new(ShouldFail(Cell::new(123)));
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^ has a drop method which cannot be safely finalized.
   |
   = help: `Gc` runs finalizers on a separate thread, so drop methods
           must only use values whose types implement `Send + Sync` or `FinalizerSafe`.

error: `boxed_trait` cannot be safely finalized.
  --> $DIR/check_finalizers.rs:48:13
   |
LL |     Gc::new(boxed_trait);
   |     --------^^^^^^^^^^^-
   |     |       |
   |     |       has a drop method which cannot be safely finalized.
   |     `Gc::new` requires that it implements the `FinalizeSafe` trait.
   |
   = help: `Gc` runs finalizers on a separate thread, so `boxed_trait` must implement `FinalizeSafe` in order to be safely dropped.

error: `gcfields` cannot be safely finalized.
  --> $DIR/check_finalizers.rs:51:13
   |
LL |         println!("Boom {}", self.0);
   |                             ------
   |                             |
   |                             caused by the expression in `fn drop(&mut)` here because
   |                             it uses another `Gc` type.
...
LL |     Gc::new(gcfields);
   |             ^^^^^^^^ has a drop method which cannot be safely finalized.
   |
   = help: `Gc` finalizers are unordered, so this field may have already been dropped. It is not safe to dereference.

error: aborting due to 3 previous errors

